# kitehor

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  conda-release.yml  release.yml
conda/kitehor/: meta.yaml
config/: classifier.toml
docs/: ci-status.md  detect.md  irregularity.md  irregularity_and_subrepeat_v0_12.md  onboarding_pipelines.md  release.md  report.md  rescore.md  rule.md  rule_proto.md  simulate.md  synth.md
docs/new/: detect_impl_plan.md  detect_m7_plan.md  detect_spec.md  rule_proto_impl_plan.md  scan_port_plan.md  simulator_plan.md  (+3 more)
examples/: validate_rf.rs
ground_truth/: build_grid.py  params.tsv  simulate_hor.py
ground_truth_v2/: README.md  generate_configs.py  manifest.tsv  run_batch.sh
src/: analyze.rs  classifier.rs  classify.rs  cli.rs  coverage.rs  emit_periods.rs  errors.rs  features.rs  hor_call.rs  io.rs  kite.rs  lib.rs  main.rs  monomer_model.rs  periodogram.rs  rule.rs  sequence.rs  simulate.rs  simulate_grid.rs
tests/: analyze_ci_corpus.rs  analyze_smoke.rs  detect_expectations.tsv  detect_kite_emit.rs  detect_m0.rs  detect_m1.rs  detect_m2.rs  detect_m3.rs  detect_m3_5.rs  detect_m4.rs  detect_m5.rs  detect_m7_2_mixed_override.rs  integration_smoke.rs  periodogram_bundle.rs  rescore_smoke.rs  rule_classify_fixtures.rs  ssr_scan_fixture.rs  subrepeat_hor_validate_smoke.rs  summary_merge_smoke.rs  synth_cli.rs  synth_corpus.rs  synth_e2e.rs  synth_schema_drift.rs  tandem_validate_python_parity.rs
(+1729 files in other folders)
