[package]
name        = "kitehor"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
description = "Kite-first probabilistic Higher-Order Repeat (HOR) detector for tandem-repeat arrays"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/kavonrtep/kitehor"
homepage    = "https://github.com/kavonrtep/kitehor"
documentation = "https://github.com/kavonrtep/kitehor#readme"
keywords    = ["bioinformatics", "tandem-repeats", "hor", "genomics", "satellite-dna"]
categories  = ["science", "command-line-utilities"]
exclude     = [
    "test_data/**",
    "ground_truth/**",
    "tools/**",
    "examples/**",
    "docs/**",
    "tests/**",
    ".github/**",
    "CLAUDE.md",
]

[dependencies]
clap        = { version = "4", features = ["derive"] }
needletail  = "0.7"
rayon       = "1"
rustfft     = "6"
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["float_roundtrip"] }
toml        = "0.8"
csv         = "1"
ahash       = "0.8"
anyhow      = "1"
thiserror   = "2"
log         = "0.4"
env_logger  = "0.11"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto           = "thin"
codegen-units = 1

[[bin]]
name = "kitehor"
path = "src/main.rs"

[lib]
name = "kitehor"
path = "src/lib.rs"
